# flowgger

./: Cargo.toml
src/: main.rs
src/flowgger/decoder/: gelf_decoder.rs
src/flowgger/encoder/: gelf_encoder.rs
src/flowgger/output/: kinesis_output.rs  mod.rs  tls_output.rs
