cargo-features = ["edition"]

[package]
edition = "2018"
name = "flowgger"
version = "0.2.6"
authors = ["Frank Denis <github@pureftpd.org>"]
build = "build.rs"

[features]
capnp-recompile = ["capnpc"]
coroutines = ["coio"]

default = ["kinesis"]

kinesis = ["rusoto_core", "rusoto_kinesis"]

[build-dependencies.capnpc]
version = "*"
optional = true

[dependencies]
capnp = "*"
chrono = "*"
clap = "*"
flate2 = "*"
log = "*"
rand = "*"
redis = "*"
serde = "1"
serde_json = "1"
toml = "~0.2"
openssl = "*"
mdo = "*"
failure = "0.1.3"

[dependencies.coio]
git = "https://github.com/zonyitoo/coio-rs"
optional = true

[dependencies.kafka]
git = "https://github.com/spicavigo/kafka-rust"
features = ["snappy", "gzip", "security"]
optional = true

[dependencies.rusoto_core]
version = "0.35.0"
optional = true

[dependencies.rusoto_kinesis]
version = "0.35.0"
optional = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = "abort"
